<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="question_toronto_population">Toronto is the most populated city in Canada?</string>
    <string name="question_toronto_capital">Toronto is the capital of Canada?</string>
    <string name="question_toronto_language">Main language in Toronto is English?</string>
    <string name="button_true">true</string>
    <string name="button_false">false</string>
    <string name="feedback_correct">Well done</string>
    <string name="feedback_wrong">Try again</string>
    <string name="button_next">Next</string>
    <string name="feedback_no_more_questions_message">No more questions to display</string>
    <string name="button_previous">Prev</string>
    <string name="button_next_description">Next Question</string>
    <string name="button_previous_description">Previous Question</string>
    <string name="title_activity_answer">Answer</string>
    <string name="answer_warning">Are you sure you want to do this?</string>
    <string name="button_answer_title">Show Answer</string>
    <string name="button_show_answer">Show Answer</string>
    <string name="menu_title_api_version">api version</string>
</resources>
